@@ -1893,6 +1893,7 @@ operator|.
 name|BQ
 argument_list|)
 expr_stmt|;
+comment|//List<Query> boostQueries = U.parseQueryStrings(req, boostParams);
 name|boostQueries
 operator|=
 literal|null
@@ -1910,21 +1911,6 @@ operator|>
 literal|0
 condition|)
 block|{
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|Float
-argument_list|>
-name|bqBoosts
-init|=
-name|SolrPluginUtils
-operator|.
-name|parseFieldBoosts
-argument_list|(
-name|boostParams
-argument_list|)
-decl_stmt|;
 name|boostQueries
 operator|=
 operator|new
@@ -1936,28 +1922,15 @@ argument_list|()
 expr_stmt|;
 for|for
 control|(
-name|Map
-operator|.
-name|Entry
-argument_list|<
 name|String
-argument_list|,
-name|Float
-argument_list|>
-name|bqs
+name|qs
 range|:
-name|bqBoosts
-operator|.
-name|entrySet
-argument_list|()
+name|boostParams
 control|)
 block|{
 if|if
 condition|(
-name|bqs
-operator|.
-name|getKey
-argument_list|()
+name|qs
 operator|.
 name|trim
 argument_list|()
@@ -1973,10 +1946,7 @@ name|q
 init|=
 name|subQuery
 argument_list|(
-name|bqs
-operator|.
-name|getKey
-argument_list|()
+name|qs
 argument_list|,
 literal|null
 argument_list|)
@@ -1984,29 +1954,6 @@ operator|.
 name|getQuery
 argument_list|()
 decl_stmt|;
-name|Float
-name|b
-init|=
-name|bqs
-operator|.
-name|getValue
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|b
-operator|!=
-literal|null
-condition|)
-block|{
-name|q
-operator|.
-name|setBoost
-argument_list|(
-name|b
-argument_list|)
-expr_stmt|;
-block|}
 name|boostQueries
 operator|.
 name|add
